# Naval-strike

./: CMakeLists.txt  Dossier de projet.docx  File.h  Journal_travail_bord.xlsx  Maquette_Minimum.drawio  Maquette_Moyenne.drawio  Maquette_Regle.drawio  Maquette_Scores.drawio  Maquette_aide_pour_minimum_moyen.drawio  Maquette_scores_pour_minimum_moyen.drawio  Menu.h  Naval_Strike.c  Play.h  Résultats.xlsx  aide.c  file.c  logs.txt  main.c  menu.c  menu.h  play.c  play.h
IMG/Maquettes [OLD]/: Maquette_Minimum.drawio
MCD/: MCD_NS.drawio
Maquettes/: Maquette.drawio  Maquette_Option.drawio
Maquettes [OLD]/: Maquette_Option.drawio  Maquette_Regle.drawio
Media/: Dossier de projet.docx  Formulaires_test_ICI.xlsx  Journal_travail_bord.xlsx  Résultats.xlsx  ~$ssier de projet.docx
MyLibrary/: Utils.c  Utils.h  aide.c  aide.h  file.c  file.h  jouer.c  jouer.h  lirescore.c  lirescore.h  logs.c  logs.h  menu.c  menu.h  options.c  options.h  play.c  play.h  readscore.c  readscore.h  sauvgarder.c  sauvgarder.h  save.c  save.h  scores.c  scores.h
Naval-Strike 0.1/: .gitignore  CMakeLists.txt
Use case & scenario/: Scenario bataille navale.xlsx  Use Case bataille navale.drawio
